# DHGE

./: .gitattributes  README.md  a.out  main  main.c
36_min-max/: a.out  min-max.c
A8/: file1.txt
HEX-input/: hex.c
Klassenliste/: classlist.c
Klausurvorbereitung/: 1.1.c  1.4.c  1.6.c
SDL_usage/: a.out  logo.c  mandelbrot  ptr-selectionsort.c
String-Funktionen/: strappend.c  strtextcpy.c
binominalkoeffizient/: binominialkoeffizient.c
c++/: CMakeLists.txt  Referenz-Returnwert.cpp
c++/17-Files_lesen_&_schreiben:_File_klein_schreiben,_File_zentrieren/: a.out  main.cpp
c++/21-Exceptions,_Stringstreams:_Datumsrechner_mit_Fehlerbehandlung/: a.out  datum-diff-xcpt-angabe.cpp
c++/4a-Teil_1:_Erste_Klassen_und_Objekte/: a.out  ausgangsbasis.cpp  rectan.cpp
c++/4b-Teil_2:_File-Aufteilung,_dynamisch_angelegte_Objekte/: a.out  color.h  main.cpp  rectangle.cpp  rectangle.h
c++/4c-Teil_3:_Copy-Konstruktor usw./: a.out  main.cpp  rectangle.cpp  rectangle.h
c++/4d-Teil_4:_Vererbung_und_clone:_Ellipsen/: circ.cpp  circ.h  color.h  graobj.cpp  graobj.h  main.cpp  rectangle.cpp  rectangle.h
c++/8-Operatoren:_Bruchrechnen/: a.out  main.cpp
c++/A1-C++_mir_wxWidgets-GUI/: main.cpp  mein_programm  myapp
c++/[TODO]6-Vererbung,_Klasse_mit_dyn._Daten:_Array-Klasse_mit_Statistiken/: array-abgel-main.cpp
c++/[TODO]9-Operatoren:_String-Klasse/: strings-main.cpp
c++/[todo]26-Template-Klassen_für_Paare_und_Arrays/: main.cpp
c++/test-Projects/OpenGL/: app  glad.c
c++/test-Projects/simpleHTTPServer/: http_request.hpp
c++/test/simpleHTTPServer/: main.cpp
(+68 files in other folders)
